Fix overflow/zoom issue

--- a/style.scss
+++ b/style.scss
@@ -164,6 +164,7 @@ footer {
 #slide-1 {
   position:relative;
   min-height:900px;
+  overflow-x:hidden;
   .logos {
     margin-top:60px;
     position:relative;
